--- a/app/templates/navbar.hbs
+++ b/app/templates/navbar.hbs
@@ -7,15 +7,28 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      {{#link-to 'index' class="navbar-brand"}}Library App{{/link-to}}
+      {{#link-to 'index' class="navbar-brand" }}Library App{{/link-to}}
     </div>
 
     <div class="collapse navbar-collapse" id="main-navbar">
       <ul class="nav navbar-nav">
-            {{#link-to 'index' tagName="li"}}<a href="">Home</a>{{/link-to}}
-            {{#link-to 'about' tagName="li"}}<a href="">About</a>{{/link-to}}
-            {{#link-to 'contact' tagName="li"}}<a href="">Contact</a>{{/link-to}}
+        {{#link-to 'index' tagName="li" }}<a href="">Home</a>{{/link-to}}
+        {{#link-to 'about' tagName="li" }}<a href="">About</a>{{/link-to}}
+        {{#link-to 'contact' tagName="li" }}<a href="">Contact</a>{{/link-to}}
       </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+
+      <ul class="nav navbar-nav navbar-right">
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+            Admin<span class="caret"></span>
+          </a>
+          <ul class="dropdown-menu">
+            {{#link-to 'admin.invitations' tagName="li" }}<a href="">Invitations</a>{{/link-to}}
+          </ul>
+        </li>
+      </ul>
+    </div>
+    <!-- /.navbar-collapse -->
+  </div>
+  <!-- /.container-fluid -->
 </nav>
