--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -11,7 +11,7 @@
        {{textarea class="form-control" placeholder="Your message. (At least 5 characters.)" rows="7" value=message}}
      </div>
      <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-4 col-md-3">
-       <button class="btn btn-primary btn-lg btn-block" {{action 'saveInvitation'}} disabled={{isDisabled}}>Send message</button>
+       <button class="btn btn-primary btn-lg btn-block" {{action 'saveMessage'}} disabled={{isDisabled}}>Send message</button>
      </div>
    </div>
 
