--- a/app/templates/admin/contacts.hbs
+++ b/app/templates/admin/contacts.hbs
@@ -6,6 +6,7 @@
       <th>ID</th>
       <th>E-mail</th>
       <th>Message</th>
+      <th>Action</th>
     </tr>
   </thead>
   <tbody>
@@ -14,6 +15,7 @@
       <th>{{contact.id}}</th>
       <td>{{contact.email}}</td>
       <td>{{contact.message}}</td>
+      <td><button class="btn btn-danger btn-xs" {{action 'deleteContact' contact}}>Delete</button></td>
     </tr>
   {{/each}}
   </tbody>
