--- a/app/templates/navbar.hbs
+++ b/app/templates/navbar.hbs
@@ -7,18 +7,21 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      {{#link-to 'index' class="navbar-brand"}}Library App{{/link-to}}
+      {{#link-to 'index' class="navbar-brand" }}Library App{{/link-to}}
     </div>
 
     <div class="collapse navbar-collapse" id="main-navbar">
       <ul class="nav navbar-nav">
         {{#nav-link-to 'index'}}Home{{/nav-link-to}}
         {{#nav-link-to 'libraries'}}Libraries{{/nav-link-to}}
-        {{#nav-link-to 'about'}}About{{/nav-link-to}}
-        {{#nav-link-to 'contact'}}Contact{{/nav-link-to}}
+        {{#nav-link-to 'authors'}}Authors{{/nav-link-to}}
+        {{#nav-link-to 'books'}}Books{{/nav-link-to}}
+
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
+        {{#nav-link-to 'about'}}About{{/nav-link-to}}
+        {{#nav-link-to 'contact'}}Contact{{/nav-link-to}}
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             Admin<span class="caret"></span>
@@ -30,6 +33,8 @@
           </ul>
         </li>
       </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+    </div>
+    <!-- /.navbar-collapse -->
+  </div>
+  <!-- /.container-fluid -->
 </nav>
